# fuzzyboi

./: .gitignore  Cargo.toml
src/: client.rs  fuzzer.rs  input.rs  instance.rs  main.rs  metadata.rs  mutator.rs  options.rs
